tests/snapshots/examples_fixtures/type_system__failing__74_hm_index_non_indexable_compile_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/74_hm_index_non_indexable_compile_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify indexable value (Array/List/Tuple/Map) with Int.

  --> examples/type_system/failing/74_hm_index_non_indexable_compile_mismatch.flx:2:5
  |
2 |     x[0]
  |     ^
  |     - expected indexable value (Array/List/Tuple/Map), found Int
  |     - indexed value is known at compile time

Help:
  index only arrays, lists, tuples, or maps
== stdout ==
<not executed>
